--- a/mainWindow.html
+++ b/mainWindow.html
@@ -11,7 +11,7 @@
     </div>
   </nav>
   <h3 class="center">CrystalChocolate</h3>
-	<p>A UI for trasparency in the gestion of the project Bit&Nibs</p>
+	<p>A UI for trasparency in the management of the project Bit&Nibs</p>
   <h3> EUR </h3>
   <p id="tag"><span>€ </span></p>
 
