--- a/loginWindow.html
+++ b/loginWindow.html
@@ -17,7 +17,7 @@
                 <input type="text" name="username">
                 <label for="password">Password</label>
                 <input type="text" name="password">
-                <button class="btn-small waves-effect waves-light col s3 offset-s9" type="submit" onclick="">Submit</button>
+                <button class="btn-small waves-effect waves-light col s3 offset-s9" type="submit" onclick="submitData()">Submit</button>
             </fieldset>
             </form>
             <div class="col s2"></div>
