--- a/mainWindow.html
+++ b/mainWindow.html
@@ -11,10 +11,11 @@
     </div>
   </nav>
   <h3 class="center">CrystalChocolate</h3>
-	<p>A UI for trasparency in the management of the project Bit&Nibs</p>
-  <h3> EUR </h3>
-  <p id="tag"><span>€ </span></p>
-
+  <div class="container">
+	    <p class="col s8 center">A UI for trasparency in the management of the project Bit&Nibs</p>
+      <h3 class="col s4 center"> EUR </h3>
+      <p id="tag" class="col s4 center"><span>€ </span></p>
+  </div>
         <script>
           const key = require('./keys/key');
           const secret = require('./keys/secret');
