--- a/loginWindow.html
+++ b/loginWindow.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col s2"></div>
             <form class="col s8">
-            <fieldset class="">
+            <fieldset>
                 <legend>Login</legend>
                 <label for="username">User</label>
                 <input type="text" name="username" id="user">
@@ -21,6 +21,9 @@
             </fieldset>
             </form>
             <div class="col s2"></div>
+        </div>
+        <div class="row">
+            <p class="col s6 offset-s4">Not registred yet? <a href="">Sign Up</a></p>
         </div>
     </div>
     <script>
