--- a/mainWindow.html
+++ b/mainWindow.html
@@ -1,7 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+      <script>
+    function variables(){
+      inicio = $('#inicio').css('height');
+      que = $('#que').css('height');
+      historia = $('#historia').css('height');
+      fabrica = $('#fabrica').css('height');
+      banco = $('#banco').css('height');
+      soporte = $('#soporte').css('height');
+      timeUp = 850;
+      timeDown = 300;
+    }
+
+    var retardo = function(){
+      location.reload(false);
+    };
+
+    $(document).ready(function(){
+      variables()
+        $("#inicio").click(function(){
+          if(inicio === "54px" && que === "54px"){
+            $('#que>p').hide();
+            $('#que').animate({ height: '10'}, timeUp, 'swing');
+            $('#historia>p').hide();
+            $('#historia').animate({ height: '10px'}, timeUp, 'swing');
+            $('#fabrica>p').hide();
+            $('#fabrica').animate({ height: '10px'}, timeUp, 'swing');
+            $('#banco>p').hide();
+            $('#banco').animate({ height: '10px'}, timeUp, 'swing');
+            $('#soporte>p').hide();
+            $('#soporte').animate({ height: '10px'}, timeUp, 'swing');
+            variables()
+          };
+
+          if(inicio === "54px" && que === "10px"){
+            $('#que').animate({ height: '54px'}, timeDown, 'swing');
+            $('#que>p').show();
+            $('#historia').animate({ height: '54px'}, timeDown, 'swing');
+            $('#historia>p').show();
+            $('#fabrica').animate({ height: '54px'}, timeDown, 'swing');
+            $('#fabrica>p').show();
+            $('#banco').animate({ height: '54px'}, timeDown, 'swing');
+            $('#banco>p').show();
+            $('#soporte').animate({ height: '54px'}, timeDown, 'swing');
+            $('#soporte>p').show();
+            variables()
+            setTimeout(retardo, timeDown*4);
+          }
+        });
+
+        $("#que").click(function(){
+          if(que === "54px" && historia === "54px"){
+            $('#inicio>p').hide();
+            $('#inicio').animate({ height: '10'}, timeUp, 'swing');
+            $('#historia>p').hide();
+            $('#historia').animate({ height: '10px'}, timeUp, 'swing');
+            $('#fabrica>p').hide();
+            $('#fabrica').animate({ height: '10px'}, timeUp, 'swing');
+            $('#banco>p').hide();
+            $('#banco').animate({ height: '10px'}, timeUp, 'swing');
+            $('#soporte>p').hide();
+            $('#soporte').animate({ height: '10px'}, timeUp, 'swing');
+            variables()
+          }
+
+          if(que === "54px" && historia === "10px"){
+            $('#inicio').animate({ height: '54px'}, timeDown, 'swing');
+            $('#inicio>p').show();
+            $('#historia').animate({ height: '54px'}, timeDown, 'swing');
+            $('#historia>p').show();
+            $('#fabrica').animate({ height: '54px'}, timeDown, 'swing');
+            $('#fabrica>p').show();
+            $('#banco').animate({ height: '54px'}, timeDown, 'swing');
+            $('#banco>p').show();
+            $('#soporte').animate({ height: '54px'}, timeDown, 'swing');
+            $('#soporte>p').show();
+            variables()
+            setTimeout(retardo, timeDown*4);
+          }
+        });
+
+        $("#historia").click(function(){
+          if(historia === "54px" && fabrica === "54px"){
+            $('#inicio>p').hide();
+            $('#inicio').animate({ height: '10'}, timeUp, 'swing');
+            $('#que>p').hide();
+            $('#que').animate({ height: '10px'}, timeUp, 'swing');
+            $('#fabrica>p').hide();
+            $('#fabrica').animate({ height: '10px'}, timeUp, 'swing');
+            $('#banco>p').hide();
+            $('#banco').animate({ height: '10px'}, timeUp, 'swing');
+            $('#soporte>p').hide();
+            $('#soporte').animate({ height: '10px'}, timeUp, 'swing');
+            variables()
+          }
+
+          if(historia === "54px" && fabrica === "10px"){
+            $('#inicio').animate({ height: '54px'}, timeDown, 'swing');
+            $('#inicio>p').show();
+            $('#que').animate({ height: '54px'}, timeDown, 'swing');
+            $('#que>p').show();
+            $('#fabrica').animate({ height: '54px'}, timeDown, 'swing');
+            $('#fabrica>p').show();
+            $('#banco').animate({ height: '54px'}, timeDown, 'swing');
+            $('#banco>p').show();
+            $('#soporte').animate({ height: '54px'}, timeDown, 'swing');
+            $('#soporte>p').show();
+            variables()
+            setTimeout(retardo, timeDown*4);
+          }
+        });
+
+        $("#fabrica").click(function(){
+          if(fabrica === "54px" && banco === "54px"){
+            $('#inicio>p').hide();
+            $('#inicio').animate({ height: '10'}, timeUp, 'swing');
+            $('#que>p').hide();
+            $('#que').animate({ height: '10px'}, timeUp, 'swing');
+            $('#historia>p').hide();
+            $('#historia').animate({ height: '10px'}, timeUp, 'swing');
+            $('#banco>p').hide();
+            $('#banco').animate({ height: '10px'}, timeUp, 'swing');
+            $('#soporte>p').hide();
+            $('#soporte').animate({ height: '10px'}, timeUp, 'swing');
+            variables()
+          }
+
+          if(fabrica === "54px" && banco === "10px"){
+            $('#inicio').animate({ height: '54px'}, timeDown, 'swing');
+            $('#inicio>p').show();
+            $('#que').animate({ height: '54px'}, timeDown, 'swing');
+            $('#que>p').show();
+            $('#historia').animate({ height: '54px'}, timeDown, 'swing');
+            $('#historia>p').show();
+            $('#banco').animate({ height: '54px'}, timeDown, 'swing');
+            $('#banco>p').show();
+            $('#soporte').animate({ height: '54px'}, timeDown, 'swing');
+            $('#soporte>p').show();
+            variables()
+            setTimeout(retardo, timeDown*4);
+          }
+        });
+
+        $("#banco").click(function(){
+          if(banco === "54px" && soporte === "54px"){
+            $('#inicio>p').hide();
+            $('#inicio').animate({ height: '10'}, timeUp, 'swing');
+            $('#que>p').hide();
+            $('#que').animate({ height: '10px'}, timeUp, 'swing');
+            $('#historia>p').hide();
+            $('#historia').animate({ height: '10px'}, timeUp, 'swing');
+            $('#fabrica>p').hide();
+            $('#fabrica').animate({ height: '10px'}, timeUp, 'swing');
+            $('#soporte>p').hide();
+            $('#soporte').animate({ height: '10px'}, timeUp, 'swing');
+            variables()
+          }
+
+          if(banco === "54px" && soporte === "10px"){
+            $('#inicio').animate({ height: '54px'}, timeDown, 'swing');
+            $('#inicio>p').show();
+            $('#que').animate({ height: '54px'}, timeDown, 'swing');
+            $('#que>p').show();
+            $('#historia').animate({ height: '54px'}, timeDown, 'swing');
+            $('#historia>p').show();
+            $('#fabrica').animate({ height: '54px'}, timeDown, 'swing');
+            $('#fabrica>p').show();
+            $('#soporte').animate({ height: '54px'}, timeDown, 'swing');
+            $('#soporte>p').show();
+            variables()
+            setTimeout(retardo, timeDown*4);
+          }
+        });
+
+        $("#soporte").click(function(){
+          if(soporte === "54px" && banco === "54px"){
+            $('#inicio>p').hide();
+            $('#inicio').animate({ height: '10'}, timeUp, 'swing');
+            $('#que>p').hide();
+            $('#que').animate({ height: '10px'}, timeUp, 'swing');
+            $('#historia>p').hide();
+            $('#historia').animate({ height: '10px'}, timeUp, 'swing');
+            $('#fabrica>p').hide();
+            $('#fabrica').animate({ height: '10px'}, timeUp, 'swing');
+            $('#banco>p').hide();
+            $('#banco').animate({ height: '10px'}, timeUp, 'swing');
+            variables()
+          }
+
+          if(soporte === "54px" && banco === "10px"){
+            $('#inicio').animate({ height: '54px'}, timeDown, 'swing');
+            $('#inicio>p').show();
+            $('#que').animate({ height: '54px'}, timeDown, 'swing');
+            $('#que>p').show();
+            $('#historia').animate({ height: '54px'}, timeDown, 'swing');
+            $('#historia>p').show();
+            $('#fabrica').animate({ height: '54px'}, timeDown, 'swing');
+            $('#fabrica>p').show();
+            $('#banco').animate({ height: '54px'}, timeDown, 'swing');
+            $('#banco>p').show();
+            variables()
+            setTimeout(retardo, timeDown*4);
+          }
+        });
+    });
+  </script>
 	<title>CrystalChocolate</title>
 </head>
 <body>
@@ -10,20 +219,25 @@
       <a class="logo"><img src="https://image.ibb.co/fm3oPf/logo.png" alt="logo" border="0"  style="height:75%; margin-top:10px; margin-left:5px"></a>
     </div>
   </nav>
-  <h3 class="center">CrystalChocolate</h3>
+<!--   <h3 class="center">CrystalChocolate</h3> -->
   <div class="container">
-	    <p class="col s8 center">A UI for trasparency in the management of the project Bit&Nibs</p>
-      <h3 class="col s4 center"> EUR </h3>
-      <p id="tag" class="col s4 center"><span>€ </span></p>
+    <div id="logo"></div>   
+    <div id="inicio"><p>inicio</p></div>
+    <div id="que"><p>¿Qué es la chocosfera?</p></div>
+    <div id="historia"><p>Historia</p></div>
+    <div id="fabrica"><p>Choco Fábrica</p></div>
+    <div id="banco"><p>Banco</p></div>
+    <div id="soporte"><p>Soporte</p></div>
+<!-- 	  <p class="col s8 center">A UI for trasparency in the management of the project Bit&Nibs</p> -->
+    <h3 class="col s4 center"> EUR </h3>
+    <p id="tag" class="col s4 center"><span>€ </span></p>
   </div>
         <script>
           const key = require('./keys/key');
           const secret = require('./keys/secret');
-
           const KrakenClient = require('./kraken');
           const kraken = new KrakenClient(key, secret);
           var message = "null";
-
           kraken.api('Balance')
             .then(res => {
               message = res.result.ZEUR;
