--- a/loginWindow.html
+++ b/loginWindow.html
@@ -13,7 +13,7 @@
             <form class="col s8">
             <fieldset>
                 <legend>Login</legend>
-                <label for="username">User</label>
+                <label for="username">User or e-mail</label>
                 <input type="text" name="username" id="user">
                 <label for="password">Password</label>
                 <input type="text" name="password" id="pass">
