--- a/mainWindow.html
+++ b/mainWindow.html
@@ -14,30 +14,30 @@
     </div>
   </nav>
 
-  <div id="logo"></div>   
+  <div id="logo"></div>
   <ul class="collapsible" id="collaps">
     <li>
-      <div class="collapsible-header" id="inicio">inicio</div>
+      <div class="collapsible-header valign-wrapper" id="inicio"><div class="center-align">inicio</div></div>
       <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
     </li>
     <li>
-      <div class="collapsible-header" id="que">¿Qué es la chocosfera?</div>
+      <div class="collapsible-header valign-wrapper" id="que">¿Qué es la chocosfera?</div>
       <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
     </li>
     <li>
-      <div class="collapsible-header" id="historia">historia</div>
+      <div class="collapsible-header valign-wrapper" id="historia">historia</div>
+      <div class="collapsible-body valign-wrapper"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header valign-wrapper" id="fabrica">Choco Fábrica</div>
+      <div class="collapsible-body valign-wrapper"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header valign-wrapper" id="banco">Banco</div>
       <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
     </li>
     <li>
-      <div class="collapsible-header" id="fabrica">Choco Fábrica</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
-    <li>
-      <div class="collapsible-header" id="banco">Banco</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-    </li>
-    <li>
-      <div class="collapsible-header" id="soporte">Soporte</div>
+      <div class="collapsible-header valign-wrapper" id="soporte">Soporte</div>
       <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
     </li>
   </ul>
