Delete unneeded div.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -17,7 +17,7 @@
   <div id="logo"></div>
   <ul class="collapsible" id="collaps">
     <li>
-      <div class="collapsible-header valign-wrapper" id="inicio"><div class="center-align">inicio</div></div>
+      <div class="collapsible-header valign-wrapper" id="inicio">inicio</div>
       <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
     </li>
     <li>
