--- a/mainWindow.html
+++ b/mainWindow.html
@@ -37,8 +37,10 @@
     </li>
     <li>
       <div class="collapsible-header valign-wrapper" id="banco">Banco</div>
-      <div class="collapsible-body" id="banco-body">  <h3 class="col s4 center"> EUR </h3>
-      <p id="tag" class="col s4 center"><span>€ </span></p></div>
+      <div class="collapsible-body" id="banco-body"> 
+        <h3 class="col s4 center"> EUR </h3>
+        <p id="tag" class="col s4 center"><span>€ </span></p>
+      </div>
     </li>
     <li>
       <div class="collapsible-header valign-wrapper" id="soporte">Soporte</div>
