--- a/loginWindow.html
+++ b/loginWindow.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h3 class="center">Loging</h3>
+    <h3 class="center">Login</h3>
     <div class="container">
         <div class="row">
             <div class="col s2"></div>
